# embedded-jsonrpc

./: Cargo.toml  README.md
src/: lib.rs  varint.rs
src/glob_match/: LICENSE.txt  mod.rs
src/stackfuture/: mod.rs  tests.rs
src/tests/: memory_pipe.rs
