[package]
name = "embedded-jsonrpc"
version = "0.6.2"
edition = "2021"
license = "MPL-2.0"
description = "A JSON-RPC 2.0 server implementation for embedded systems."

[dependencies]
defmt = { version = "0.3", optional = true }
embassy-futures = "0.1.1"
embassy-sync = "0.6.1"
embedded-io-async = { version = "0.6.1" }
heapless = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"

[dev-dependencies]
critical-section = { version = "1.2.0", features = ["std"]}
futures = "0.3"
tokio = { version = "1.41.1", features = ["full"] }

[features]
default = []
defmt = ["dep:defmt"]
